src/K8S/K8S/playlists-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlists-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playlistservice
  template:
    metadata:
      labels:
        app: playlistservice
    spec:
      containers:
        - name: playlistservice
          image: alessiacontenti/playlistserviceapi:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: playlists-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: playlistservice
  ports: 
  - name: playlistservice
    protocol: TCP
    port: 80
    targetPort: 80
