src/K8S/K8S/tracks-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracknpservice-srv
spec:
  type: NodePort
  selector:
    app: trackservice
  ports:
    - name: trackservice
      protocol: TCP
      port: 80
      targetPort: 80
